V8.2 - Fix Hero Image
- hero image now stretched out for larger viewport

--- a/docs/styles.css
+++ b/docs/styles.css
@@ -498,9 +498,20 @@ footer img {
 
     /* ======= hero img ================================================== */
     #EG img {
-        max-width: 100%;
+        width: 100vw;
         height: auto;
+        margin: 0;
+        padding: 0;
         border-radius: 5px;
+    }
+
+    
+    #EG img {
+        width: 100%;
+        height: 60vh;
+        display: block;
+        object-fit: cover;
+        border-radius: 0;
     }
 
     /* ======= main index ============================================== */
